--- a/ubuntu-nginx-docker2.yml
+++ b/ubuntu-nginx-docker2.yml
@@ -63,6 +63,14 @@ Resources:
           ToPort: 80
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 8443
+          ToPort: 8443
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
           CidrIp: 0.0.0.0/0
@@ -119,6 +127,11 @@ Resources:
             curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" \
             -o /usr/local/bin/docker-compose
             chmod +x /usr/local/bin/docker-compose
+            cd /home/ubuntu
+            mkdir -p /srv/docker/keycloak/data/certs/
+            cd /srv/docker/keycloak/data/certs/
+            openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout keycloak.key -out keycloak.crt -subj "/C=US/ST=California/L=San Francisco/O=Keycloak/OU=Keycloak/CN=${FullDomainFrontend}"
+            chmod 755 /srv/docker/keycloak/data/certs/keycloak.*
             git clone https://github.com/mehmetafsar510/keycloak.git
             cd keycloak
             docker-compose up -d
