--- a/docker-compose-ssl/docker-compose.yaml
+++ b/docker-compose-ssl/docker-compose.yaml
@@ -39,9 +39,9 @@ services:
         DB_DATABASE: keycloak
         DB_USER: keycloak
         DB_SCHEMA: public
-        DB_PASSWORD: password
-        KEYCLOAK_USER: admin
-        KEYCLOAK_PASSWORD: Pa55w0rd
+        DB_PASSWORD: ${DB_PASSWORD}
+        KEYCLOAK_USER: ${KEYCLOAK_USER}
+        KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
         KEYCLOAK_HOSTNAME: {FQDN}
         KC_PROXY: edge
         PROXY_ADDRESS_FORWARDING: "true"
