--- a/docker-compose-ssl/.env
+++ b/docker-compose-ssl/.env
@@ -1,3 +1,3 @@
-DB_PASSWORD: password
-KEYCLOAK_USER: admin
-KEYCLOAK_PASSWORD: Pa55w0rd
+DB_PASSWORD=password
+KEYCLOAK_USER=admin
+KEYCLOAK_PASSWORD=Pa55w0rd
