--- a/docker-compose-ssl/docker-compose.yaml
+++ b/docker-compose-ssl/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       environment:
         POSTGRES_DB: keycloak
         POSTGRES_USER: keycloak
-        POSTGRES_PASSWORD: password
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   keycloak:
       image: quay.io/keycloak/keycloak:legacy
       environment:
