--- a/docker-compose-ssl/docker-compose.yaml
+++ b/docker-compose-ssl/docker-compose.yaml
@@ -51,6 +51,9 @@ services:
       volumes:
         - "/srv/docker/keycloak/data/certs/keycloak.key:/etc/x509/https/tls.key"
         - "/srv/docker/keycloak/data/certs/keycloak.crt:/etc/x509/https/tls.crt"
+        - ./keycloak/scripts/disable-theme-cache.cli:/opt/jboss/startup-scripts/disable-theme-cache.cli
+        - ./keycloak/themes/custom:/opt/jboss/keycloak/themes/custom
+        - ./keycloak/realms/realm-export.json:/tmp/realm-export.json
       ports:
         - "8443:8443"
       depends_on:
