--- a/docker-compose-ssl/docker-compose.yaml
+++ b/docker-compose-ssl/docker-compose.yaml
@@ -47,6 +47,7 @@ services:
         PROXY_ADDRESS_FORWARDING: "true"
         REDIRECT_SOCKET: "proxy-https"
         KEYCLOAK_FRONTEND_URL: https://{FQDN}
+        KEYCLOAK_IMPORT: /tmp/realm-export.json
 
       volumes:
         - "/srv/docker/keycloak/data/certs/keycloak.key:/etc/x509/https/tls.key"
